change color and add forms login

--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -84,8 +84,8 @@
       <div class="card default-color-dark">
   
         <!--Card image-->
-        <div class="view">
-          <img src="../../assets/img/3.jpg" class="card-img-top" alt="photo">
+        <div class="view overlay zoom">
+          <img src="../../assets/img/3.jpg" class="card-img-top img-fluid" alt="photo">
           <a href="#">
             <div class="mask rgba-white-slight"></div>
           </a>
@@ -115,8 +115,8 @@
       <div class="card primary-color-dark">
   
         <!--Card image-->
-        <div class="view">
-          <img src="..//../assets/img/3.jpg" class="card-img-top" alt="photo">
+        <div class="view overlay zoom">
+          <img src="..//../assets/img/3.jpg" class="card-img-top img-fluid" alt="photo">
           <a href="#">
             <div class="mask rgba-white-slight"></div>
           </a>
@@ -146,8 +146,8 @@
       <div class="card warning-color-dark">
   
         <!--Card image-->
-        <div class="view">
-          <img src="../../assets/img/3.jpg" class="card-img-top" alt="photo">
+        <div class="view overlay zoom">
+          <img src="../../assets/img/3.jpg" class="card-img-top img-fluid" alt="photo">
           <a href="#">
             <div class="mask rgba-white-slight"></div>
           </a>
@@ -187,7 +187,7 @@
 
 
 
-   <div class="row no-gutters position-relative">
+   <div class="row no-gutters position-relative bgb3b3ff">
     <div class="col-md-6 mb-md-0 p-md-4">
       <img class="w-100" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="image">
     </div>
