--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,8 @@
 
 <!-- Footer -->
-<footer class="page-footer font-small" style="background-color: #006622;">
+<footer class="page-footer font-small" style="background-color:   #000033;">
 
-    <div style="background-color:     #33ff33;">
+    <div style="background-color: #4d4dff;">
       <div class="container">
   
         <!-- Grid row-->
