--- a/src/app/components/table1/table1.component.html
+++ b/src/app/components/table1/table1.component.html
@@ -1,5 +1,4 @@
-<div class="wrapper-editor">
-
+<!-- <div class="wrapper-editor">
     <div class="d-flex justify-content-center buttons-wrapper flex-wrap">
       <button id="" class="btn btn-sm btn-teal btn-rounded addNewColumn">Activate edits</button>
       <button id="" class="btn btn-sm btn-mdb-color btn-rounded removeColumns" disabled>Deactivate edits</button>
@@ -582,4 +581,4 @@
         headerLength: 7,
         });
         $('.dataTables_length').addClass('bs-select');
-  </script>
+  </script> -->
