--- a/src/app/navbar1/navbar1.component.html
+++ b/src/app/navbar1/navbar1.component.html
@@ -1,7 +1,7 @@
 
 
 <!--Navbar -->
-<nav class="mb-1 navbar navbar-expand-lg navbar-dark lighten-1 fixed-top scrolling-navbar" style="background-color: #006622; ">
+<nav class="mb-1 navbar navbar-expand-lg navbar-dark lighten-1 fixed-top scrolling-navbar morpheus-den-gradient">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-555"
       aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
