--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,35 @@
 
-    <!-- <app-nav1></app-nav1> -->
+        <!-- <app-nav1></app-nav1> -->
 
-    
-    <app-navbar1></app-navbar1>
+        
+        <app-navbar1></app-navbar1>
 
-    <app-slider></app-slider>
+        <app-slider></app-slider>
 
     <div class="container">
+        <br>
+            <!-- <app-form></app-form> -->
+            <app-formplayer></app-formplayer>
+            <app-formowner></app-formowner>
+        <br>
 
-        <app-logsign></app-logsign>
+        <app-cards2></app-cards2>
 
         <app-cards></app-cards>
 
         <app-multicards></app-multicards>
 
+        <app-map></app-map>
+
+
         <!-- <app-table1></app-table1> -->
+
+        <br>
 
     </div>
 
-    <app-maps></app-maps>
+        <app-maps></app-maps>
 
-    <app-footer></app-footer>
-
-
-
-
-
-
+        <app-footer></app-footer>
 
 
