--- a/src/app/components/multicards/multicards.component.html
+++ b/src/app/components/multicards/multicards.component.html
@@ -1,7 +1,7 @@
 <!--Accordion wrapper-->
 <div class="accordion md-accordion accordion-1" id="accordionEx23" role="tablist">
     <div class="card">
-      <div class="card-header green lighten-2 z-depth-1" role="tab" id="heading96">
+      <div class="card-header blue lighten-2 z-depth-1" role="tab" id="heading96">
         <h5 class="text-uppercase mb-0 py-1">
           <a class="white-text font-weight-bold" data-toggle="collapse" href="#collapse96" aria-expanded="true"
             aria-controls="collapse96">
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div class="card">
-      <div class="card-header green lighten-2 z-depth-1" role="tab" id="heading97">
+      <div class="card-header blue lighten-2 z-depth-1" role="tab" id="heading97">
         <h5 class="text-uppercase mb-0 py-1">
           <a class="collapsed font-weight-bold white-text" data-toggle="collapse" href="#collapse97"
             aria-expanded="false" aria-controls="collapse97">
@@ -61,7 +61,7 @@
       </div>
     </div>
     <div class="card">
-      <div class="card-header green lighten-2 z-depth-1" role="tab" id="heading98">
+      <div class="card-header blue lighten-2 z-depth-1" role="tab" id="heading98">
         <h5 class="text-uppercase mb-0 py-1">
           <a class="collapsed font-weight-bold white-text" data-toggle="collapse" href="#collapse98"
             aria-expanded="false" aria-controls="collapse98">
