--- a/src/app/features/auth/user/register/register.component.html
+++ b/src/app/features/auth/user/register/register.component.html
@@ -2,75 +2,94 @@
     <div class="col-8 offset-2">
         <h2 class="text-center">User Register</h2>
 
-        <form [formGroup]="registerForm">
-            <!-- // ID // -->
-            <div class="form-group">
-                <label for="id">User ID</label>
-                <input type="text" class="form-control" id="id" formControlName="id" placeholder="ID">
-                <span *ngIf="id.touched &&  id.errors?.required"> this is required </span>
-            </div>
+        <form (ngSubmit)="onSubmit()" #form="ngForm" [formGroup]="registerForm">
+           
             <!-- // first_name //  -->
             <div class="form-group">
                 <label for="first_name">First Name</label>
-                <input type="text" class="form-control" formControlName="fname" placeholder="first name">
-                <span *ngIf="fname.touched &&  fname.errors?.required"> this is required </span>
+                <input type="text" class="form-control" formControlName="firstName" placeholder="first name">
+                <span *ngIf="firstName.touched &&  firstName.errors?.required"> this is required </span>
             </div>
             <!-- // last_name //  -->
 
             <div class="form-group">
                 <label for="last_name">last name</label>
-                <input type="text" class="form-control" formControlName="lname" placeholder="last name">
-                <span *ngIf="lname.touched &&  lname.errors?.required"> this is required </span>
+                <input type="text" class="form-control" formControlName="lastName" placeholder="last name">
+                <span *ngIf="lastName.touched &&  lastName.errors?.required"> this is required </span>
+            </div>
+            
+            <div class="form-group">
+                <label for="username">user name</label>
+                <input type="text" class="form-control" formControlName="username" placeholder="user name">
+                <span *ngIf="username.touched &&  username.errors?.required"> this is required </span>
             </div>
 
             <!-- // email //  -->
             <div class="form-group">
                 <label for="email">email</label>
-                <input type="text" class="form-control" formControlName="email" placeholder="email">
+                <input type="email" class="form-control" formControlName="email" placeholder="email">
                 <span *ngIf="email.touched &&  email.errors?.required"> this is required must be email </span>
             </div>
 
             <!-- // phone //  -->
-            <div class="form-group">
+            <div class="form-group" >
                 <label for="phone">phone</label>
                 <input type="text" class="form-control" formControlName="phone" placeholder="phone">
                 <span *ngIf="phone.touched && phone.errors?.required"> must be phone</span>
             </div>
 
             <!-- // address //  -->
-            <div class="form-group">
-                <label for="address"> address</label>
+            <div formGroupName="address" >
+            <div class="form-group" >
+                <label for="address"> governorate</label>
                 <div className="form-group">
                     <div className="input-group">
                         <span className="input-group-addon">
                             <span className="glyphicon glyphicon-lock"></span>
                         </span>
-                        <select className="form-control">
-                            <option>mansoura</option>
-                            <option>cairo</option>
-                            <option>smart vallige</option>
-                            <option>talkha</option>
+                        <select className="form-control" formControlName="governorate_id" (change)="get_Gov_Cities($event)">
+                            <option *ngFor="let governorate of governorates" [value]="governorate._id" >{{governorate.name}}</option>
                         </select>
 
                     </div>
 
                 </div>
-                <!-- <span *ngIf="address.touched &&  address.errors?.required"> this is required </span> -->
+             
             </div>
+            <div class="form-group" >
+                <label for="address"> city</label>
+                <div className="form-group">
+                    <div className="input-group">
+                        <span className="input-group-addon">
+                            <span className="glyphicon glyphicon-lock"></span>
+                        </span>
+                        <select className="form-control" formControlName="city_id">
+                           
+                            <option *ngFor="let city of cities" [value]="city._id">{{city.name}}</option>
+                         
+                        </select>
+
+                    </div>
+
+                </div>
+                
+            </div>
+        </div>
+           
 
             <!-- // password //  -->
 
             <div class="form-group">
                 <label for="password">password </label>
-                <input type="text" class="form-control" formControlName="password" placeholder="password">
+                <input type="password" class="form-control" formControlName="password" placeholder="password">
                 <span *ngIf="password.touched &&  password.errors?.required"> this is required </span>
             </div>
 
-            <input type="submit" value="Register" class="btn btn-primary ">
+            <input type="submit" value="Register" class="btn btn-primary "   [disabled]="isValid!==true">
 
         </form>
         <!-- Form -->
-
+        {{registerForm.value | json }}
         <!-- <div class="container">
     <router-outlet></router-outlet>
   </div> -->
