add login user page

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,20 +1,1 @@
-
-    <app-slider></app-slider>
-
-
-<div class="container">
-
-    <app-cards0></app-cards0>
-
-    <hr>
-    <app-cards1></app-cards1>
-
-    <hr>
-    <app-accordion></app-accordion>
-    <hr>
-
-    <app-contact-us></app-contact-us>
-
-    <hr>
-
-</div>
+<p>home works!</p>
