--- a/src/app/features/auth/user/login/login.component.html
+++ b/src/app/features/auth/user/login/login.component.html
@@ -1,20 +1,20 @@
 <div class="row">
     <div class="col-8 offset-2">
         <h3 class="text-center">Player Login</h3>
-        <form [formGroup]="loginform" (ngSubmit)="onSubmit()" #form="ngForm">
+        <form [formGroup]="loginform">
 
             <!-- // User Name //  -->
             <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" formControlName="email" placeholder="Email">
-                <span *ngIf="email.touched && email.errors?.required"> this is required </span>
+                <label for="phone">User Name</label>
+                <input type="text" class="form-control" formControlName="username" placeholder="User Name">
+                <span *ngIf="username.touched && username.errors?.required"> this is required </span>
             </div>
 
             <!-- // password //  -->
 
             <div class="form-group">
                 <label for="password">password </label>
-                <input type="password" class="form-control" formControlName="password" placeholder="password" digits>
+                <input type="text" class="form-control" formControlName="password" placeholder="password" digits>
                 <span *ngIf="password.touched && password.errors?.required"> this is required </span>
             </div>
 
