style home and profile

--- a/src/app/core/home/components/slider/slider.component.html
+++ b/src/app/core/home/components/slider/slider.component.html
@@ -17,8 +17,19 @@
           <div class="mask rgba-black-light"></div>
         </div>
         <div class="carousel-caption">
+                    
+          <div class="row">
+            <div class="col-6">
+                <app-register-button></app-register-button>
+            </div>
+            <div class="col-6">
+                <app-register-button-user></app-register-button-user>
+            </div>
+          </div>
+     
           <h3 class="h3-responsive">Light mask</h3>
           <p>First text</p>
+
         </div>
       </div>
       <div class="carousel-item">
@@ -29,8 +40,19 @@
           <div class="mask rgba-black-strong"></div>
         </div>
         <div class="carousel-caption">
+                    
+          <div class="row">
+            <div class="col-6">
+                <app-register-button></app-register-button>
+            </div>
+            <div class="col-6">
+                <app-register-button-user></app-register-button-user>
+            </div>
+          </div>
+     
           <h3 class="h3-responsive">Strong mask</h3>
           <p>Secondary text</p>
+
         </div>
       </div>
       <div class="carousel-item">
@@ -41,6 +63,16 @@
           <div class="mask rgba-black-slight"></div>
         </div>
         <div class="carousel-caption">
+                    
+          <div class="row">
+            <div class="col-6">
+                <app-register-button></app-register-button>
+            </div>
+            <div class="col-6">
+                <app-register-button-user></app-register-button-user>
+            </div>
+          </div>
+     
           <h3 class="h3-responsive">Slight mask</h3>
           <p>Third text</p>
         </div>
