--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -3,6 +3,19 @@
 
 
 <div class="container">
+    <hr>
+    <br>
+
+    <!-- <div class="row">
+        <div class="col-6">
+            <app-register-button></app-register-button>
+        </div>
+        <div class="col-6">
+            <app-register-button-user></app-register-button-user>
+        </div>
+    </div>
+
+    <br> -->
 
     <app-cards0></app-cards0>
 
@@ -11,6 +24,8 @@
 
     <hr>
     <app-accordion></app-accordion>
+    <hr>
+    <app-images></app-images>
     <hr>
 
     <app-contact-us></app-contact-us>
