--- a/src/app/features/user/profile/profile.component.html
+++ b/src/app/features/user/profile/profile.component.html
@@ -1,1 +1,6 @@
-<p>profile works!</p>
+<app-user-slider></app-user-slider>
+
+<app-booking></app-booking>
+
+
+<!-- <app-progress-bar></app-progress-bar> -->
