--- a/src/app/features/auth/user/login/login.component.html
+++ b/src/app/features/auth/user/login/login.component.html
@@ -22,7 +22,11 @@
 
         </form>
         <!-- Form -->
-
+        <!-- Rgisiter Button -->
+        <div class="text-center">
+            <a href="" class="btn btn-default btn-rounded my-3 p-3" routerLink="/userRgisiter"
+                    style="width: 30%;"><i class="fas fa-user-plus mr-1"></i>Rgisiter</a>
+        </div>
         <!-- <div class="container">
     <router-outlet></router-outlet>
   </div> -->
