--- a/src/app/features/auth/owner/login/login.component.html
+++ b/src/app/features/auth/owner/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-8 offset-2">
         <h3 class="text-center font-weight-bold">Owner Login</h3>
-        <form [formGroup]="loginform" (ngSubmit)="savaFormData()">
+        <form [formGroup]="loginform" (ngSubmit)="savaFormData(loginform.value)">
 
             <!-- // E-Mail //  -->
             <div class="form-group">
