--- a/src/app/features/owner/profile/profile.component.html
+++ b/src/app/features/owner/profile/profile.component.html
@@ -1,21 +1,11 @@
 
 <div class="container">
      
-        <app-ownerprofileheader></app-ownerprofileheader>
+        <app-details ></app-details>
         
         <router-outlet></router-outlet>
     
-        <!-- <div class="row">
-            <div class="col-lg-6">
-                <app-ownerprofileedit></app-ownerprofileedit>
-    
-            </div>
-    
-            <div class="col-lg-6">
-                <app-ownerplayground></app-ownerplayground>
-            </div>
-    
-        </div> -->
+       
 </div>
 
 
